# rust-templatehash

./: Cargo.toml  README.md
src/: lib.rs
tests/: test_templatehash.rs
tests/data/: templatehash.json
