[package]
name = "templatehash"
version = "0.1.0"
edition = "2021"

[dependencies]
bitcoin = "0.32.6"
serde = { version = "1.0.219", default-features = false, features = ["derive", "alloc"], optional = true }

[features]
serde = [ "dep:serde", "bitcoin/serde" ]

[dev-dependencies]
serde_json = "1.0.140"
